fixed off center pics

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5293,8 +5293,7 @@ h6, .h6 {
 
 /* Service Details */
 .service-about-image {
-  padding-bottom: 15%;
-  padding-right: 15%; }
+  padding-bottom: 15%; }
 
 .service-about-box {
   max-width: 70%;
